package edu.fiuba.algo3.modelo;

public class Hero implements Modifier {
    @Override
    public void apply(Row row) {

    }
}
