package edu.fiuba.algo3.modelo;

public interface Modifier {
    void apply(Row row);
}
